cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_05417_sg.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Deploy SGs required by entire stack.
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Customer Resource Tags
        Parameters:
          - pmCustomer
          - pmProject
          - pmEnvironment
      - Label:
          default: VPC Configuration Parameters
        Parameters:
          - pmVpc
    ParameterLabels:
      pmCustomer:
        default: Enter Customer name
      pmProject:
        default: Enter Project name
      pmEnvironment:
        default: Enter Environment name
      pmVpc:
        default: Enter VPC id
Parameters:
  pmCustomer:
    Type: String
    Default: ACME
  pmProject:
    Type: String
    Default: AWS-Networkiong-Demo
  pmEnvironment:
    Type: String
    Default: DEV
  pmVpc:
    Type: AWS::EC2::VPC::Id
Mappings: {}
Resources:
  DMZSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref 'pmVpc'
      GroupName: DMZ-SG
      GroupDescription: Enable SSH, and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Customer
          Value: !Ref 'pmCustomer'
        - Key: Project
          Value: !Ref 'pmProject'
        - Key: Environment
          Value: !Ref 'pmEnvironment'
        - Key: Name
          Value: !Sub
            - ${Customer}-${Environment}-DMZ-SG
            - Customer: !Ref 'pmCustomer'
              Environment: !Ref 'pmEnvironment'
  ALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref 'pmVpc'
      GroupName: ALB-SG
      GroupDescription: Enable HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Customer
          Value: !Ref 'pmCustomer'
        - Key: Project
          Value: !Ref 'pmProject'
        - Key: Environment
          Value: !Ref 'pmEnvironment'
        - Key: Name
          Value: !Sub
            - ${Customer}-${Environment}-ALB-SG
            - Customer: !Ref 'pmCustomer'
              Environment: !Ref 'pmEnvironment'
  WEBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref 'pmVpc'
      GroupName: WEB-SG
      GroupDescription: Enable SSH, and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          SourceSecurityGroupId: !Ref 'DMZSG'
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          SourceSecurityGroupId: !Ref 'DMZSG'
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          SourceSecurityGroupId: !Ref 'DMZSG'
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          SourceSecurityGroupId: !Ref 'ALBSG'
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          SourceSecurityGroupId: !Ref 'ALBSG'
      Tags:
        - Key: Customer
          Value: !Ref 'pmCustomer'
        - Key: Project
          Value: !Ref 'pmProject'
        - Key: Environment
          Value: !Ref 'pmEnvironment'
        - Key: Name
          Value: !Sub
            - ${Customer}-${Environment}-WEB-SG
            - Customer: !Ref 'pmCustomer'
              Environment: !Ref 'pmEnvironment'
Outputs:
  DMZSG:
    Value: !Ref 'DMZSG'
  WEBSG:
    Value: !Ref 'WEBSG'
  ALBSG:
    Value: !Ref 'ALBSG'
